# docx-report

./: .buildinfo  .coveragerc  .pre-commit-config.yaml  .pylintrc  README.html  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  python_api.html  search.html  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: README.doctree  environment.pickle  index.doctree  python_api.doctree
.github/workflows/: docs.yml  publish.yaml  tag.yml  test.yaml
_sources/: python_api.rst.txt
docs/: conf.py  index.rst  make.bat
docx_report/: __init__.py  docx_report.py
test/: test_docx_report.py
